--- a/manual/20250318.md
+++ b/manual/20250318.md
@@ -175,7 +175,7 @@ const [state, dispatch ] = useReducer(reducer, inititalState);
 ```
 
 - reducer : 상태를 업데이트 하는 함수(순수 함수, 이하의 링크 참조)
-  - 링크
+  - https://ko.redux.js.org/usage/structuring-reducers/prerequisite-concepts/
 - initialState : 초기 '상태' 값
 - state : 현재 상태 값
 - dispatch : 액션을 발생시키는 함수
@@ -190,6 +190,306 @@ JavaScript
 npm install
 npm run dev
 githud upload
-![1](./useReducer01.webp)
-![2](./useReducer02.webp)
-![3](./useReducer03.webp)
+
+Counter.jsx 생성
+```jsx
+import { useReducer } from "react";
+
+// 1. 초기 상태
+const initialState = {count: 0}
+
+// 2. reducer 함수(상태 변경 로직을 포함)
+function reducer(state, action) {
+  switch (action.type) {
+    case "increment":
+      return {count : state.count + 1};
+    case "decrment" :
+      return {count : state.count - 1};
+    default :
+      return state;
+  }
+}
+
+// 3. 컴포넌트 상에서의 useReducer 호출
+export default function Counter() {
+  const [state, dispatch] = useReducer(reducer, initialState);
+
+  return (
+    <div>
+      <p>Count : {state.count}</p>
+      <button onClick={() => dispatch({ type: "increment"})}>+</button>
+      <button onClick={() => dispatch({ type: "decrment"})}>-</button>
+    </div>
+  );
+}
+```
+
+1. initaialState : count : 0으로 초기 상태 설정(자료형 고려 할 것)
+2. reducer 함수 : increment / decrement '액션'에 따라 count 값 변경
+3. useReducer를 사용하여 state와 dispatch 를 가져옴
+4. dispatch({ type : "increment"})를 호출하면 상태 변경
+
+해당 예시의 의의는 useReducer를 사용하는 방법에 해당합니다.
+이상의 코드의 경우 저희가 useState를 통해서 충분히 쉽게 가져갈 수 있는데, reducer 함수 부분을 보시면 아시다시피 내부에 복잡한 로직이 들어가더라도 useReducer 와 함께 모여있는 상태로 언제나 불러낼 수 있다는 점이 간단한 로직만 포함할 수 있는 useState에 비해 강점이 있다고 알아두시면 됩니다.
+
+* 물론 저희는 count가 음수가 되는 상황도 건드리지 않았습니다.
+
+### useState vs. useReducer
+
+useSate
+- 사용 목적 : 간단한 상태 관리
+- 상태 변경 방식 : setState 로 직접 변경
+- 여러 상태 관리 : 여러 개의 useSate 사용
+- 상태 변경 로직 위치 : 컴포넌트 내부에서 관리
+
+useReducer
+- 사용 목적 : 복잡한 상태 관리
+- 상태 변경 방식 : dispatch 를 통해 변경
+- 여러 상태 관리 : 하나의 reducer에서 상태 관리 기능
+- 상태 변경 로직 위치 : reducer 함수로 분리 가능
+
+```jsx
+const [count, setCount ] = useState(0);
+<button onClick={() => setCount(count + 1)}>+</button>
+
+const [state, dispatch] = useReducer(reducer, {count: 0});
+<button onClick={() => dispatch({type: "increment"})}>+</button>
+```
+
+근데 이상의 코드에서의 문제점은 reducer 함수 파트는 작성하지 않았다는 점입니다.
+즉 간단하다면 당연히 기본 Hook 에 해당하는 useState가 더 낫습니다.
+
+![useReducer#1](./useReducer01.webp)
+이상의 그림은 useState를 예시화했습니다. 100원을 입금할 것이라는 요구 사항을 가진 사용자와 사용자의 계좌인 state가 존재하는데, 사용자는 입금을 하기 위해서 직접 계좌에 입금 내역을 작성해야한다고 볼 수 있습니다.
+
+![useReducer#2](./useReducer02.webp)
+그리고 이상의 그림은 useReducer의 흐름을 은행으로 표시한 것으로, 사용자는 '입금하겠다'는 요구사항을 지니고 있으며, useState와 달리 창구 직원 / 은행 시스템이라는 중간자가 존재합니다. 이때 사용자는 '입금'이라는 액션을 창구 직원에게 보내면 이를 은행 시스템에 전다랗고 사용자 게좌의 state를 업데이트하게 된다고 볼 수 있습니다.
+
+즉, 
+- 요구사항 : action
+- 창구직원 : dispatch 
+- 은행시스템 : reducer
+
+로 비유한 것으로 useReducer를 사용하게 될 경우 입금, 출금 및 다양한 일을 사용자가 직접 처리하지 않고 action으로 간단하게 처리할 수 있기 때문에 복잡한 state를 다루어야 한다면 useReducer가 더 좋은 선택이 됩니다.
+
+그렇다면 복잡하다의 기준이 뭐길래 어떤 때는 useState / 다른 때는 useReducer 를 사용하는가?
+
+객체나 배열 같이 여러 개의 하위 값을 포함하는 복잡한 state를 가지거나 혹은 확장성이 있을 때에는 useReducer를 사용할 때 코드가 간결해지고 유지보수가 편리하다.
+
+
+#### useState를 통한 복수의 함수 처리 예시
+
+```jsx
+import { useState } from "react";
+
+export default function StateUse() {
+  const [count, setCount] = useState(0);
+
+  function down() {
+    setCount(count - 1);
+    console.log('사과를 1개 먹었습니다.');
+  }
+
+  function reset() {
+    setCount(0);
+    console.log('사과를 모두 먹었습니다.');
+  }
+
+  function up() {
+    setCount(count + 1);
+    console.log('사과를 1개 구매했습니다.');
+  }
+
+  return(
+    <div>
+      <p>현재 내가 가지고 있는 사과의 개수는 {count} 개</p>
+      <input type="button" value="🍎 1개 먹음" onClick={down} />
+      <br /><br />
+      <input type="button" value="🍎 1개 구매" onClick={up} />
+      <br /><br />
+      <input type="button" value="🍎 모두 먹음" onClick={reset} />
+    </div>
+  );
+}
+```
+
+강사 염려 사항 : 이정도면 할만한데를 의도한게 아님을 명시
+
+```jsx
+import { useReducer } from "react";
+
+function reducer(prevCount, action) {
+  if(action === 'up') {
+    return prevCount + 1;
+  }else if(action === 'down'){
+    return prevCount - 1;
+  } // 이후 부분의 조건문 작성하시오
+  else if(action === 'reset'){
+    return 0;
+  }
+}
+
+export default function ReducerUse() {
+  const [count, dispatch] = useReducer(reducer, 0);
+  // const 를 변경하기 위해서는 dispatch 를 사용
+
+  function down() {
+    dispatch("down");
+  }
+
+  
+  function up() {
+    dispatch("up");
+  }
+
+  function reset() {
+    dispatch("reset");
+  }
+  
+  // return은 동일하게 완성하시오.
+  return(
+    <div>
+      <p>현재 내가 가지고 있는 사과의 개수는 {count} 개</p>
+      <input type="button" value="🍏 1개 먹음" onClick={down} />
+      <br /><br />
+      <input type="button" value="🍏 1개 구매" onClick={up} />
+      <br /><br />
+      <input type="button" value="🍏 모두 먹음" onClick={reset} />
+    </div>
+  );
+}
+```
+
+#### reducer란?
+
+: 현재 state와 action 값을 전달 받아 새로운 state를 반환하는 함수
+
+```jsx
+// 현재 state, action 을 매개변수로 받음
+function Reducer(state, action) => {
+  return // 구현부
+}
+
+// 혹은 화살표 함수를 통해서
+const Reducer = (state, action) => {
+  return // 구현부
+}
+```
+
+#### action 과 type
+- action은 현재 state의 업데이트(상태를 변경)를 위해 필요한 정보를 담은 값으로 보통은 객체의 형태를 띱니다. 하지만 action의 값은 string 이거나 number 라도 상관없습니다.(JS자료형으로 명시했습니다.)
+
+reducer의 로직은 action이 새로운 state를 계산하는데 쓰이는지 확인하기 위해 action.type 을 체크합니다. 이때 action들이 분명한 의미를 가지고 유용한 정보를 주도록 설명하는 방식의 type 필드를 작성해야 합니다. 근데 안쓸 때도 있습니다.
+
+```jsx
+switch (action.type) {
+  // Reducer 함수로 전달된 action 객체의 값이
+  // {type : 'LOGIN_SUCCESS'} 라면 이하의 구분이 실행되도록 하는 예제
+  case "LOGIN_SUCCESS" :
+    return {
+      ...state,
+      user: action.payload,
+      isLogin: true,
+      message: "로그인 성공!",
+    };
+    // 기타 로직 관련
+}
+```
+
+예를 들어 이상의 코드는 switch 코드를 사용하여 action 객체의 type 필드에 매핑되어있는 값, 즉 LOGIN_SUCCESS case에 따라 state를 업데이트합니다. (LOGIN_FAILED도 있을 수 있겠습니다.)
+
+### reducer 함수의 조건 - 순수 함수
+
+: reducer를 순수 함수로 작성하는 이유는 개발자가 예상한대로 동작하는 것이 보장되도록 하는 것에 목적이 있습니다.
+
+-> reducer 함수 내에서 reducer 함수 스코프 바깥의 변수를 수정하거나 사용해서는 안된다.
+
+-> 함수 내에서 선언된 변수는 그 내부에서만 사용돼야 하고, 바깥(전역)의 변수의 값 대입 및 참조는 순수 함수가 아니다, 라고 해석할 수 있습니다.
+
+* 순수함수(pure function) vs. 비순수 함수(impure function)
+
+순수함수의 의미 : 동일한 매개변수가 주어지면 항상 동일한 결과를 반환하는 함수.
+  - 순수함수를 사용하면 부수 효과(side effect)가 발생하는 것을 방지할 수 있다.
+
+```jsx
+// 순수함수
+function pureAdd(num1, num2) {
+  return num1 + num2;
+}
+
+console.log(pureAdd(1,2));  // 3
+console.log(pureAdd(1,2));  // 3
+```
+
+외부 환경에 의한 영향을 받지 않고, 주어진 argument 가 같을 때 같은 결과를 반환
+
+```jsx
+// 비순수 함수
+let sideNumber = 10;
+
+function impureAdd(num1, num2) {
+  return num1 + num2 + sideNumber;
+}
+
+console.log(impureAdd(1,2)); // 13
+
+sideNumber = 20;
+console.log(impureAdd(1,2)); // 23
+```
+
+impureAdd 함수는 스코프 외부에서 선언된 sideNumber 변수가 impureAdd 함수에서 다뤄지고 있고, 주어진 argument가 같아도 다른 결과를 반환하므로 비순수 함수에 해당함.
+
+### reducer 함수의 조건 - 상태 변이(state mutation) 지양
+
+state는 불변의 데이터 구조를 가져야 합니다. 하지만 빈번하게 state의 원본을 수정하거나 추가, 혹은 덮어쓰는 방식을 사용할 경우 state 변이가 발생하게 됩니다.
+
+문제 예시
+- 기존의 state를 사용하던 다른 컴포넌트에서 에러를 발생키셔 리렌더링시에 예기치 않은 문제가 발생할 수 있습니다.
+- 디버깅을 시도하더라도 state가 어디서 변경되었는지 알기가 어렵습니다.
+- 이상의 문제를 해결하기 위해, 깊은 복사를 사용하여 업데이트한 state를 반환하여 기존 state를 대체
+
+### deep copy(깊은 복사) vs. shallow copy(앝은 복사)의 개념
+- 깊은 복사 : 데이터(값) 자체를 복사하여 '다른' 주소값을 가지는 새로운 변수(혹은 객체)로 생성하는 것을 의미함.
+  - 기존의 데이터와 별개로 같은 걸 만드는 것
+
+상태 변이의 예시 / 깊은 복사의 예시
+```jsx
+function Reducer(state, action) {
+  switch (action.type) {
+    case: "LOGIN_SUCCESS":
+    // 상태 변이의 사례가 여기서 나옵니다. -> 지양해야함
+    state[user] = action.payload;
+    state[isLogin] = true;
+    state[message] = "로그인 성공";
+    return state;
+    //그 다음 케이스 기타 로직
+  }
+}
+```
+```jsx
+switch (action.type) {
+  case "LOGIN_SUCCESS" :
+    // 깊은 복사를 통해 새로운 객체를 반환하는 사례 -> 지향합니다.
+    return {
+      ...state,
+      user: action.payload,
+      isLogin: true,
+      message: "로그인 성공!",
+    };
+    // 기타 로직 관련
+}
+```
+
+### useReducer 중급 예제
+- src/components/LoginForm.jsx
+- src/context/Context.jsx
+- src/reducer/Reducer.jsx
+- App2.jsx 생성 후 기존 App.jsx 전체를 복사 붙여넣기
+- App.jsx는 초기화
+
+20250319 -> useState / useReducer 비교 대조 부분을 페이지 수준에서 다루어볼 예정
+설문조사 네이버 폼 -> 내일 공지해서 월요일에 결과 발표
+성함 정도의 개인정보를 받을 예정, 조별 과제 찬성 유무에 대한 조사만 함
+
+조별 과제의 경우 3월 25일부터 조편성 및 호의
+개별 과제의 경우 3월 25일 기준으로 강사님이 과제 형태를 정해놓고 제출해가면서 여러분만의 사이트를 만들어 나가는 과정을 목표로 합니다.
