--- a/manual/20250324.md
+++ b/manual/20250324.md
@@ -1,12 +1,3 @@
 # 코인 가격 추적기
 
-## 프로젝트 생성
-- npm create vite@4.3
-- cointrackerapp
-- react
-- JS
-- 폴더 이동
-- npm install
-- npm run dev
-- 돌아와서
-- github upload
+## App.jsx 초기화
