--- a/manual/20250324.md
+++ b/manual/20250324.md
@@ -8,3 +8,40 @@ Coin tracker API 주소
 즉, 0번지 부터 1999 까지 있는 상황입니다.
 
 그리고 객체 하나당 properties의 숫자도 매우 많았습니다. 그런 API가 매번 렌더링 될 떄마다 다시 불러와진다면 사용성이 매우 부정적일겁니다(느려서).
+
+loading 을 삼항연산자로 표현
+```jsx
+{ loading ? <strong>Loading...⚙</strong> : null}
+```
+
+```jsx
+useEffect(() => {
+    fetch('https://api.coinpaprika.com/v1/tickers')
+    .then(response => response.json())
+    .then(json => console.log(json));
+  },[]);
+```
+
+이상의 코드에서 알 수 있는 점은 fetch를 통해 API를 받아오고서, 다 받아오면 (then) 그것을 .json() 메서드를 통해 JSON 데이터화시켰습니다. 그리고 그 이후 (then) console.log를 통해서 json 데이터를 개발자 도구에서 확인할 수 있도록 작성
+
+여기서 중요한 점은
+
+```jsx
+useEffect(() => {}, []);
+```
+라는 구조에서 useEffect 함수의 두 번째 argument인 배열입니다.
+의존성 배열에 아무런 element가 없다는 것은 참조할 만한 상태가 없다는 의미이므로, 최초 렌더링 시에만 useEffect의 첫번째 argument인 callback 함수가 실행됩니다.
+
+그렇다면, 저희가 작성할 코드는 최초 페이지가 렌더링 될 때 API를 받아와서 JSON 데이터화하고, 이를 console.log에 찍는다는 것을 의미.
+
+### API 터져서 project 하나 새로 생성
+
+- npm create vite@4.3
+- moiveapp
+- react
+- JS
+- 폴더 이동
+  - npm install
+- API 받고
+- https://yts.mx/api/v2/list_movies.json?minimum_rating=8.8&sort_by=year
+- github upload
