--- a/manual/20250327.md
+++ b/manual/20250327.md
@@ -6,9 +6,9 @@ Home2.jsx 만들어서 옮기고 사전 형태로 작성 시작
 
 1 만시간 / 깃허브 블로그 통제
 
-현재 Home.jsx 에 return 부분에 className 들을 달아줌.
+현재 Home.jsx에 return 부분에 className들을 다 달아줬습니다. 근데 잘 생각해보면 Home 컴포넌트 내부에 Movie 컴포넌트가 있습니다. 그렇다면 Movie 컴포넌트에도 className을 달아줘야지만 css가 먹히게 되겠죠.
 
-Home.css를 완성
+위에거 다하고 그 다음에 Home.css를 완성
 ```css
 .movie-grid {
   display: grid;
@@ -22,3 +22,12 @@ Home.css를 완성
 main.jsx 가 index.css 를 참조하기 때문에 상속받아오면서 저희가 생각해온 css 설계와 차이가 있었습니다.
 main.jsx에서 import "./index.css";를 삭제해주면 해결
 
+# 팀 프로젝트 시 유의 사항
+1. 프론트 / 백 단계에서의 Java / SpringBoot / React / Gradle version 협의
+2. 현재 저희는 github branch가 main 하나에 전부 다 올렸기 때문에 솔직히 집에서 복습하셨다가 거기서 깃허브 올리시고 여기서 수업 할 때 깃허브에 또 push 하면 멈추는 경우들이 많습니다. 그때 저는 그냥 git push --force
+그런 이유로 branch 관리가 매우 중요 -> 이부분은 그래서 팀 생성되면 수업할 예정
+3. 그래서 팀장 역할을 하시는 분이 꽤 merge하는 과정에서 좀 고생할 수 있음.
+4. 서로서로 배웠으면 좋겠습니다.(^^)
+5. cord convention -> 커밋 메시지를 작성하는 방법
+
+25분 부터 개인 과제 부분 작성을 시작!
